--- a/style.css
+++ b/style.css
@@ -220,7 +220,12 @@ footer {
   }
   button>img {
     width: 15%;
-    height: 40%;
+    height: 50%;
+  }
+  button:hover {
+    transform: scale(1.2);
+    background: linear-gradient(135deg, hsl(0, 62%, 84%), hsl(0, 50%, 79%));
+    box-shadow: 0 10px 20px 2px hsl(0, 25%, 77%);
   }
   
   .email>#error {
